- Implemented sidebar menu functionality - Added a toggle button to the sidebar to collapse/expand it. - Sidebar now expands on mobile and desktop

--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -30,10 +30,10 @@
     <div class="dashboard-container">
         <!-- Sidebar -->
         <aside class="sidebar">
-            <div class="sidebar-collapse">
+            <!-- <div class="sidebar-toggle">
                 <i class="fas fa-chevron-left"></i>
                 <i class="fas fa-chevron-right"></i>
-               </div>
+               </div> -->
           <div class="sidebar-header">
             <i class="fas fa-chart-line"></i>
             <span>Trading Tools</span>
