- Created all legal pages including: Terms of Use, Privacy Policy and Risk Disclosure. - Added the legal.css style document for all these pages.

--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -7,7 +7,7 @@
     <title>TradeLab - Privacy</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="/styles/dashboard.css">
-    <link rel="stylesheet" href="/styles/privacy.css">
+    <link rel="stylesheet" href="/styles/legal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 
@@ -64,11 +64,10 @@
                     protect the confidentiality of information that you give us. We will share your personal data with
                     third parties only in the event that it's needed for the provision of services and data you have
                     requested (explained in detail in this privacy policy).</p>
-                <h2>Updates</h2>
+                <h3>Updates</h3>
                 <p>We may update this privacy policy at our discretion from time to time by posting a new version on our
                     website. You should check our website occasionally to ensure any changes are suitable for you.</p>
-                <p>The current version of this privacy policy was modified on April 27, 2022</p>
-                <h2>Personal data that we collect</h2>
+                <h3>Personal data that we collect</h3>
                 <ol>
                     <li>User Accounts: If you decide to create an account with TraderSync, you will need to provide us
                         some personal data so we can provide you with the services. Currently, during the registration
@@ -108,10 +107,10 @@
                         details about our use of third-party service providers, please refer to the Analytics providers
                         section below.</li>
                 </ol>
-                <h1>How do we use your personal information?</h1>
+                <h2>How do we use your personal information?</h2>
                 <p>We will process your personal data as necessary for certain legitimate business interest, which
                     include the following:</p>
-                <h2>Profile</h2>
+                <h3>Profile</h3>
                 <p>Correspond to the set of information for each individual product usage preference. User settings
                     (such but not limited to charts, privacy, portfolio, reports, trade grouping, fees, spreads, widgets
                     and more). This information is kept solely for the purpose of customizing the user’s experience when
@@ -130,21 +129,21 @@
                         billing their cards for auto-renew subscriptions. Users cannot opt out of these messages, though
                         they can delete their account.</li>
                 </ul>
-                <h2>User account deleting</h2>
+                <h3>User account deleting</h3>
                 <p>You may refuse to use our Website and/or application and may ask us to delete your account in the
                     Profile settings. Your account will be deleted immediately together with any subsequent personal
                     data you have supplied to us or we have collected. This action is irreversible.</p>
                 <p>Backups from our system might have partial chunks of your personal data. These chunks will be delete
                     automatically 30 days after the deletion took place.</p>
-                <h2>Customer Service</h2>
+                <h3>Customer Service</h3>
                 <p>When you contact our customer service team, we might use the data that we have collected from you,
                     together with any extra information you might have provided to customer service to properly solve
                     any issues you might encounter.</p>
-                <h2>API</h2>
+                <h3>API</h3>
                 <p>If you are using our API (Application Programming Interface) services (such importing trades,
                     exporting reports), then we may process your personal data in order to provide and support those
                     services.</p>
-                <h1>When would we share personal information</h1>
+                <h2>When would we share personal information</h2>
                 <p>We share your personal data with third parties in the following situations:</p>
                 <ul>
                     <li>Payment Information: Pais Users must provide payment information (name, payment card
@@ -198,20 +197,20 @@
                 </ul>
                 <p>Note that we do not share any personal information with our advertisers. They can only access
                     statistics that include the amount of impressions and clicks their ads have generated.</p>
-                <h1>Public information on our site</h1>
-                <h2>Public Profile</h2>
+                <h2>Public information on our site</h2>
+                <h3>Public Profile</h3>
                 <p>Upon creating an account with us, all your information by default is set to private. Meaning no one
                     else have access to view your information. You can decide to share trade(s) with the public if you
                     wish. Upon doing so, anyone could access the trade(s) you decide to share.</p>
                 <p>You are in control to decide which data points if any, you would like to share. For example, you can
                     decide to share your profit and loss or just your return %. You can control this under your privacy
                     settings.</p>
-                <h2>Public Content</h2>
+                <h3>Public Content</h3>
                 <p>Our services allow those with registered user account to share trades with the rest of the internet
                     via our sharing feature.</p>
                 <p>By using our sharing features, you grant irrevocable, perpetual, and royalty free license to publish
                     and disclose the content, as well as the username of the author, which makes you identifiable.</p>
-                <h1>Security of personal data</h1>
+                <h2>Security of personal data</h2>
                 <p>We use technical and organization procedures to protect your personal data and required third party
                     with who we work to do the dame.</p>
                 <p>We use Transport Layer Security (TLS) encryption technology in order to protect certain information
@@ -235,12 +234,12 @@
                 <h2>Children and sensitive personal data</h2>
                 <p>This website and mobile apps are not directed to children under the age of 18. We do not knowingly
                     contact or collect personal information from children below age of 18.</p>
-                <h1>Contact us</h1>
+                <h2>Contact us</h2>
                 <p>For more information about our privacy policy practice, if you have any questions, or if you would
                     like to make a complaint, please contact us by <a
                         href="mailto:info@tradersync.com">info@tradersync.com</a></p>
         </div>
-
+</div>
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-content">
@@ -279,6 +278,7 @@
             <div class="footer-bottom">
                 <p>&copy; 2024 TradeLab. All rights reserved.</p>
             </div>
+            
         </footer>
         <script src="/scripts/global.js"></script>
         <script src="/scripts/tradeEntry.js"></script>
