- Completed adding content to Term of Use, Privacy Policy and Risk Disclosure pages.

--- a/pages/risk-disclosure.html
+++ b/pages/risk-disclosure.html
@@ -1,11 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TradeLab - Risk Disclosure</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="/styles/legal.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="nav-brand"><a href="#">TradeLab</a></div>
+        <ul class="nav-links">
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#" class="cta-button">Dashboard</a></li>
+        </ul>
+        <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
+      </nav>
+
+    <div class="legal-container">
+        <h1>Risk Disclosure</h1>
+      <ol>
+        <li>
+          <b class="sub-titles sub-titles-update"
+            >Risk Disclaimer (For users engaged in trading activities through
+            TraderSync or its affiliates):</b
+          ><br />
+          Trading futures and forex involves significant risks and may not be
+          suitable for all investors. Investors may lose all or more than their
+          initial investment. Risk capital refers to funds that can be lost
+          without impacting one’s financial security or lifestyle. Only risk
+          capital should be used for trading, and only individuals with
+          sufficient risk capital should consider trading. Past performance does
+          not guarantee future results.
+        </li>
+        <li>
+          <b class="sub-titles sub-titles-update">Testimonial Notice:</b><br />
+          Testimonials featured on this platform (from other
+          vendors/software/products) may not reflect the experiences of all
+          clients or customers and do not guarantee future performance or
+          success.
+        </li>
+        <li>
+          <b class="sub-titles sub-titles-update"
+            >Hypothetical Performance Disclaimer:</b
+          ><br />
+          Hypothetical performance results come with inherent limitations, as
+          outlined below. There is no assurance that any account will achieve
+          profits or losses similar to those depicted. In fact, there may be
+          significant disparities between hypothetical performance results and
+          actual trading outcomes. Hypothetical results are often based on
+          historical data and do not involve financial risk. Thus, they may not
+          fully reflect the impact of actual trading conditions, including
+          financial risk. Factors such as the ability to withstand losses and
+          adhere to a particular trading strategy despite losses can materially
+          influence actual trading results. Numerous market-related factors may
+          also affect trading outcomes.
+        </li>
+      </ol>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+          <div class="footer-section">
+            <h3><a href="#">TradeLab</a></h3>
+            <p>
+              Your personal trading journal to track and analyze your trading
+              performance.
+            </p>
+          </div>
+          <div class="footer-section">
+            <h3>Quick Links</h3>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#pricing">Pricing</a></li>
+              <li><a href="#about">About</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h3>Legal</h3>
+            <ul>
+              <li><a href="#">Terms of Service</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h3>Follow Us</h3>
+            <div class="social-links">
+              <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+              <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2024 TradeLab. All rights reserved.</p>
+        </div>
+      </footer>
+      <script src="/scripts/global.js"></script>
+      <script src="/scripts/tradeEntry.js"></script>
+  </body>
 </html>
