- Linked all pages together in navigation bar and on footer

--- a/pages/terms-of-use.html
+++ b/pages/terms-of-use.html
@@ -14,13 +14,13 @@
   <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
-      <div class="nav-brand"><a href="#">TradeLab</a></div>
+      <div class="nav-brand"><a href="../index.html">TradeLab</a></div>
       <ul class="nav-links">
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#pricing">Pricing</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="../index.html" class="active">Home</a></li>
+        <li><a href="../index.html#features">Features</a></li>
+        <li><a href="../index.html#pricing">Pricing</a></li>
+        <li><a href="../index.html#about">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="#" class="cta-button">Dashboard</a></li>
       </ul>
       <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
@@ -2684,7 +2684,7 @@
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-section">
-          <h3><a href="#">TradeLab</a></h3>
+          <h3><a href="../index.html">TradeLab</a></h3>
           <p>
             Your personal trading journal to track and analyze your trading
             performance.
@@ -2693,17 +2693,19 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html#features">Features</a></li>
+            <li><a href="../index.html#pricing">Pricing</a></li>
+            <li><a href="../index.html#about">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h3>Legal</h3>
           <ul>
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="terms-of-use.html">Terms of Service</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="risk-disclosure.html">Risk Disclosure</a></li>
           </ul>
         </div>
         <div class="footer-section">
