--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
-      <div class="nav-brand"><a href="#">TradeLab</a></div>
+      <div class="nav-brand"><a href="/index.html">TradeLab</a></div>
       <ul class="nav-links">
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="/index.html" class="active">Home</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#" class="cta-button">Dashboard</a></li>
+        <li><a href="/pages/contact.html">Contact</a></li>
+        <li><a href="/pages/trade-entry.html" class="cta-button">Dashboard</a></li>
       </ul>
       <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
     </nav>
@@ -101,31 +101,33 @@
             <footer class="footer">
                 <div class="footer-content">
                     <div class="footer-section">
-                        <h3><a href="#">TradeLab</a></h3>
+                        <h3><a href="index.html">TradeLab</a></h3>
                         <p>Your personal trading journal to track and analyze your trading performance.</p>
                     </div>
                     <div class="footer-section">
                         <h3>Quick Links</h3>
                         <ul>
-                            <li><a href="#">Home</a></li>
+                            <li><a href="/index.html">Home</a></li>
                             <li><a href="#features">Features</a></li>
                             <li><a href="#pricing">Pricing</a></li>
                             <li><a href="#about">About</a></li>
+                            <li><a href="/pages/contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
                         <h3>Legal</h3>
                         <ul>
-                            <li><a href="#">Terms of Service</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="/pages/terms-of-use.html">Terms of Service</a></li>
+                            <li><a href="/pages/privacy.html">Privacy Policy</a></li>
+                            <li><a href="/pages/risk-disclosure.html">Risk Disclosure</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
                         <h3>Follow Us</h3>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin"></i></a>
-                            <a href="#"><i class="fab fa-github"></i></a>
+                            <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin" aria-label="LinkedIn"></i></a>
+                            <a href="#"><i class="fab fa-github" aria-label="GitHub"></i></a>
                         </div>
                     </div>
                 </div>
