--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -189,5 +189,7 @@
     </footer>
     <script src="/scripts/global.js"></script>
     <script src="/scripts/tradeEntry.js"></script>
+    <script src="/scripts/dashboard.js"></script>
+    <script src="/scripts/TradeObjectHandler.js"></script>
   </body>
 </html>
