--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -87,8 +87,8 @@
                 </div>
   
                 <div class="form-group">
-                  <label for="tradeType">Market:</label>
-                  <select id="tradeType" required>
+                  <label for="market">Market:</label>
+                  <select id="market" required>
                     <option value="stock">Stock</option>
                     <option value="futures">Futures</option>
                     <!-- <option value="forex">Forex</option> -->
@@ -117,11 +117,17 @@
                   <input type="datetime-local" id="date" required />
                 </div>
   
-                <div class="buy-sell">
-                  <div class="form-group">
-                    <input type="button" class="long" value="Long"/>
-                    <input type="button" class="short" value="Short"/>
-                </div>
+                <div class="form-group">
+                  <label>Direction:</label>
+                  <div class="direction-buttons">
+                    <button type="button" class="direction-btn long" data-direction="long">
+                      ▲ LONG
+                    </button>
+                    <button type="button" class="direction-btn short" data-direction="short">
+                      ▼ SHORT
+                    </button>
+                  </div>
+                  <input type="hidden" id="direction" value="long" required />
                 </div>
   
                 <div class="form-group">
