- Added a way for users to import trades and select a storage path

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -57,6 +57,7 @@
               <label for="filePath">Storage Location:</label>
               <div class="file-path-input">
                 <input type="text" id="filePath" readonly>
+                <input type="file" id="fileInput" style="display: none;" webkitdirectory directory multiple>
                 <button id="selectPath" class="btn-secondary">
                   <i class="fas fa-folder-open"></i> Select Location
                 </button>
