--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -144,7 +144,7 @@
             </div>
   
             <div class="trades-list">
-              <h2>Recent Trades</h2>
+              <!-- <h2>Recent Trades</h2> -->
               <div id="tradesList"></div>
             </div>
           </div>
