- Fixed a few issues with the dashboard positioning - Moved Trade form function from TradeObjectHandler.js to tradeEntry.js - Fixed Long/Short button to indicate when it has been pressed.

--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
       <div class="nav-brand"><a href="../index.html">TradeLab</a></div>
       <ul class="nav-links">
-        <li><a href="../index.html" class="active">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../index.html#features">Features</a></li>
         <li><a href="../index.html#pricing">Pricing</a></li>
         <li><a href="../index.html#about">About</a></li>
@@ -35,7 +35,7 @@
             <span>Trading Tools</span>
           </div>
           <nav class="sidebar-nav">
-            <a href="manualEntry.html" class="sidebar-link active">
+            <a href="trade-entry.html" class="sidebar-link active">
               <i class="fas fa-plus-circle"></i>
               <span>Manual Entry</span>
             </a>
@@ -51,7 +51,7 @@
               <i class="fas fa-calendar-alt"></i>
               <span>Calendar</span>
             </a>
-            <a href="#" class="sidebar-link">
+            <a href="settings.html" class="sidebar-link">
               <i class="fas fa-cog"></i>
               <span>Settings</span>
             </a>
