- Fixing Excel import

--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -21,8 +21,8 @@
         <li><a href="../index.html#features">Features</a></li>
         <li><a href="../index.html#pricing">Pricing</a></li>
         <li><a href="../index.html#about">About</a></li>
-        <li><a href="../index.html#contact">Contact</a></li>
-        <li><a href="#" class="cta-button">Dashboard</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="trade-entry.html" class="cta-button">Dashboard</a></li>
       </ul>
       <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
     </nav>
