- Added correct functionality to Long/Short buttons to calculate PnL.

--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
+    <script src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -61,7 +62,7 @@
         <!-- Main Content -->
         <main class="main-content">
           <div class="content-header">
-            <h1>Manual Trade Entry</h1>
+            <h1>Trade Entry</h1>
           </div>
   
           <!-- Cumulative P/L -->
