- Added functionality to display table of ALL trades in the database. - Added a 'Delete All Trades' button - Added a 'Clear Dates' button for the date picker filter. - All calculations for Total Trades, Win Rate, Total P/L and Average P/N should now perform the proper calculations and show the accurate results.

--- a/pages/trade-history.html
+++ b/pages/trade-history.html
@@ -62,7 +62,7 @@
       <!-- Main Content -->
       <main class="main-content">
         <div class="content-header">
-          <h1>All Trade History</h1>
+          <h1>Trade History</h1>
         </div>
 
         <!-- Trade Statistics -->
@@ -106,6 +106,9 @@
             <input type="date" id="startDate" />
             <span>to</span>
             <input type="date" id="endDate" />
+            <button id="clearDateRange" class="clear-date-range">
+              <i class="fas fa-times"></i> Clear Dates
+            </button>
           </div>
         </div>
 
