-- Updated color scheme for the site

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
           <i class="fas fa-chart-line"></i>
           <h3>Track Your Trades</h3>
           <p>
-            Stocks - We've got you covered. Track all your trades in one
-            place.<br class="note" />*Futures and Options coming soon.
+            Stocks, Options, Futures - We've got you covered. Track all your trades in one
+            place.
           </p>
         </div>
 
         <div class="feature-card">
-            <i class="fas fa-chart-simple" style="min-width: 30px; min-height: 30px"></i>
+            <i class="fas fa-chart-simple"></i>
             <h3>Performance Analytics</h3>
-            <p>Get detailed insights into your trading performance with our advanced analytics tools.</p>
+            <p>Get detailed insights into your trading performance with our analytics tools.</p>
         </div>
 
         <div class="feature-card">
@@ -72,31 +72,59 @@
             <h3>Mobile Friendly</h3>
             <p>Log your trades on the go with our mobile-friendly interface.</p>
     </section>
+
 <!-- Pricing Section -->
     <section id="pricing" class="pricing">
         <h2>Simple, Transparent Pricing</h2>
         <div class="pricing-grid">
             <div class="pricing-card">
-                <h3>Free</h3>
+                <h3>Free, Forever.</h3>
                 <div class="price">$0<span>/month</span></div>
                 <ul>
-                    <li><i class="fas fa-check"></i> Up to 50 trades/month</li>
+                    <li><i class="fas fa-check"></i> 100 Mb storage (cloud)</li>
+                    <li><i class="fas fa-check"></i> *Option for unlimited storage</li>
                     <li><i class="fas fa-check"></i> Basic analytics</li>
                     <li><i class="fas fa-check"></i> Cloud storage</li>
-                    <li><i class="fas fa-check"></i> Mobile access</li>
+                    <li><i class="fas fa-check"></i> Mobile friendly access</li>
                 </ul>
                 <a href="#" class="btn-primary">Get Started</a>
             </div>
             </div>
+
+            <section>
+              <p class="note">*Option for unlimited storage using in browser local storage in your own device.</p>
             </section>
+            </section>
+
+            <!-- About Section -->
+            <section id="about" class="about">
+              <div class="about-content">
+                  <h2>Our Mission</h2>
+                  <p>At TradeLab, we believe that every trader deserves access to quality tools without breaking the bank. Born from the frustration of seeing essential trading journal features locked behind expensive paywalls, we set out to create a solution that puts traders first.</p>
+                  
+                  <div class="about-grid">
+                      <div class="about-item">
+                          <h3>What We Do</h3>
+                          <p>We provide a comprehensive trading journal that helps you log, track, and analyze your trades with ease. Our platform is designed to be intuitive, efficient, and most importantly, accessible to all traders.</p>
+                      </div>
+                      
+                      <div class="about-item">
+                          <h3>Why We Do It</h3>
+                          <p>We understand that the biggest costs in online platforms are compute, storage, and hosting. For most traders, these costs are minimal - so why should you pay premium prices? We're committed to offering a free platform that covers all the essential features you need.</p>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
             <!-- Call to Action Section -->
             <section class="cta">
                 <div class="cta-content">
                     <h2>Ready to Improve Your Trading?</h2>
-                    <p>Join thousands of traders who are already tracking their success with TradeLab.</p>
+                    <p>Join other traders who are already tracking their success with TradeLab.</p>
                     <a href="#" class="btn-secondary">Sign Up Free</a>
                 </div>
             </section>
+
 <!-- Footer -->
             <footer class="footer">
                 <div class="footer-content">
