--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
           <li><a href="../index.html#pricing">Pricing</a></li>
           <li><a href="../index.html#about">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="#" class="cta-button">Dashboard</a></li>
+          <li><a href="trade-entry.html" class="cta-button">Dashboard</a></li>
         </ul>
         <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
       </nav>
@@ -36,12 +36,12 @@
         <form id="contactForm" class="contact-form">
           <div class="form-group">
             <label for="name">Name *</label>
-            <input type="text" id="name" name="name" required placeholder="Your name">
+            <input type="text" id="name" name="name" required placeholder="Your name" autocomplete="name">
           </div>
 
           <div class="form-group">
             <label for="email">Email *</label>
-            <input type="email" id="email" name="email" required placeholder="your.email@example.com">
+            <input type="email" id="email" name="email" required placeholder="your.email@example.com" autocomplete="email">
           </div>
 
           <div class="form-group">
