--- a/pages/settings.html
+++ b/pages/settings.html
@@ -22,7 +22,7 @@
         <li><a href="../index.html#pricing">Pricing</a></li>
         <li><a href="../index.html#about">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="#" class="cta-button">Dashboard</a></li>
+        <li><a href="trade-entry.html" class="cta-button">Dashboard</a></li>
       </ul>
       <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
     </nav>
