--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -48,7 +48,7 @@
               <i class="fas fa-chart-bar"></i>
               <span>Analytics</span>
             </a>
-            <a href="dashboard.html" class="sidebar-link">
+            <a href=".dashboard.html" class="sidebar-link">
               <i class="fas fa-calendar-alt"></i>
               <span>Calendar</span>
             </a>
